# tr-example

./: Makefile  README.md  pyproject.toml
src/tr_example/: __init__.py  __main__.py  inheritance.py  main_widget.py  tr_wrapper.py
src/tr_example/i18n/: en.qm  en.ts  pl.qm  pl.ts
